# Video-Compression-and-Stitching-Tool

./: CMakeLists.txt  README.md
Include/: MainWindow.h
Source/: Main.cpp  MainWindow.cpp  VideoCompressionAndStitch.rc
